# farra_hft_bot

./: CMakeLists.txt
benchmark/: CMakeLists.txt
benchmark/source/: main.cpp
include/yfinance/: quote.hpp
scripts/: build.py
source/: greeter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: main.cpp
